package com.practice.bms.bookmyshow.model;

public enum Feature {
    TWO_D,
    THREE_D,
    DOLBY_IMAX,
    DOLBY_VISION
}
