package com.practice.bms.bookmyshow.model;

public enum PaymentMode {
    CASH,
    CARD,
    UPI,
    RAZORPAY
}
