package com.practice.bms.bookmyshow.model;

public enum PaymentStatus {
    PAID,
    PENDING,
    FAILED
}
