package com.practice.bms.bookmyshow.model;

public enum SeatType {
    SILVER, GOLD, PLATINUM
}
